# PM_agent

./: .dockerignore  .env.docker.example  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile.api  Dockerfile.web  PM Research Agent.command  PROJECT_HANDOFF.md  README.md  README.zh-CN.md  STITCH_FRONTEND_REFACTOR_BRIEF.md  Start PM.command  Stop PM.command  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.base.json
apps/api/: pyproject.toml
apps/api/pm_agent_api/: __init__.py  bootstrap_admin.py  main.py  worker_daemon.py  worker_entry.py
apps/api/pm_agent_api/repositories/: __init__.py  base.py  flagship_store.py  in_memory_store.py
apps/api/pm_agent_api/routes/: admin.py  auth.py  chat_sessions.py  design.py  research_jobs.py  runtime.py  streams.py
apps/api/pm_agent_api/runtime/: repo_bootstrap.py
apps/api/pm_agent_api/schemas/: __init__.py  auth_dto.py  chat_dto.py  design_dto.py  research_dto.py  runtime_dto.py  system_update_dto.py  task_dto.py
apps/api/pm_agent_api/services/: auth_service.py  chat_service.py  design_material_service.py  design_trend_service.py  job_service_utils.py  research_job_service.py  runtime_service.py  (+1 more)
apps/api/tests/: test_api_routes.py  test_chat_service_delta_events.py  test_design_material_service.py  test_design_routes.py  test_design_storage.py  test_design_trend_service.py  test_flagship_repository_behaviour.py  test_quality_gate_rules.py  test_repository_factory.py  test_runtime_service_profiles.py  test_stream_fanout.py  test_system_update_service.py
(+146 files in other folders)
