[project]
name = "pm-agent-api"
version = "0.1.0"
description = "FastAPI backend for PM Research Agent"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn>=0.29.0",
  "pydantic>=2.6.0",
  "httpx>=0.27.0",
  "beautifulsoup4>=4.12.0",
  "psycopg[binary]>=3.2.0",
  "redis>=5.2.0",
  "boto3>=1.35.0",
  "Pillow>=10.0.0",
  "colorthief>=0.2.1",
  "python-multipart>=0.0.6"
]
